=head1 NAME

Changes - Apache mod_perl change logfile

=head1 CHANGES

=over 3

=item 1.16_01-dev

Apache::URI->parse($r) without a $url argument will create a "self" url 
from $r->uri

Apache::Registry will now allow DirectoryIndex to work even when
ExecCGI is off. [ Ari Jolma <ajolma@ahti.hut.fi> / Ask Bjoern Hansen
<ask@netcetera.dk> ]

added HTTP_OK to Apache::Constants :http export tag

fixed bug in Apache::ModuleConfig->getline

Segfaults when build with Ben-SSL 1.27, and trying to exec the gcache.
[ Michael Shields <shields@crosslink.net> ]

Fixes for a clean compile with mod_ssl [ Salvador Ortiz Garcia
<sog@msg.com.mx> ]

Minor fix to the debug option in Apache::StatINC [ Ask Bjoern Hansen
<ask@netcetera.dk> ]

=item 1.16 - October 2, 1998

Apache::Util::escape_html() now handles `"' and `&'. should also be a
bit faster now, avoiding a strdup() call

PerlPassEnv/PerlSetEnv will now call my_setenv() so the C enviroment
array is also updated 

Apache::Registry will return DECLINED if -d $r->filename so 
DirectoryIndex, etc., will work again

mod_perl now passes 'make test' on BSD/OS 3.1 again. [ Vivek Khera ]

added INSTALL.simple.mod_ssl and SSL_BASE=... Makefile.PL option

Apache::PerlRun::handler changes:

 - PerlRunOnce option
 - don't localize %INC, just remove new, non-.pm files

fix bug that would hose child if a croak() happened, be it from a
syntax error, Carp::croak(), etc.  remove child_terminate() hack that
was blaming the Perl stack being corrupt

Apache::StatINC can now be configured to write debug stuff with
a PerlSetVar [Ask Bjoern Hansen <ask@netcetera.dk>]

perl_startup() will now check the Apache.pm $VERSION

fixups for building Stronghold 2.4

new Apache::File module

send_fd() will now accept an optional length argument

HTTP_NOT_MODIFED added to Apache::Constants EXPORT_OK, removed
duplicate HTTP_NOT_ACCEPTABLE entry

if there is a Perl parse error in <Perl> sections, return $@ so Apache
can properly report the problem 
