@@ -3,10 +3,6 @@ SHORT TERM STUFF (this section should always be empty in a release version!)
                  (well, close to it anyhow)
 ---------------------------------------------------------------------------
 
-- eval require for Perl*Handler (auto-preload)
-
-- fix perl_startup() so saveINC happens after PerlRequire's (Eric Cholet)
-
 - looks like we need a per-server configuration merge routine
 
 - Andrew Ford's Apache::FakeRequest patch
