@@ -8,6 +8,9 @@ Changes - Apache mod_perl change logfile
 
 =item 1.16_01-dev
 
+Perl*Handler configuration will attempt to pre-load the argument as a
+module if it appears to be a two-level namespace
+
 Apache::URI->parse($r) without a $url argument will create a "self" url 
 from $r->uri
 
